Fixed word wrap on notes

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ code {
 }
 
 .note {
-  background-color: #badde8;
+  /* background-color: #badde8; */
   border-radius: 10px;
   padding: 1rem;
   min-height: 200px;
@@ -225,14 +225,14 @@ button:active {
 .existing-note-title {
   font-size: 20px;
   max-height: 15px;
-  word-break: break-all;
+  word-break: break-word;
   display: flex;
   white-space: normal;
   padding-bottom: 8%;
 }
 
 .existing-note-text {
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .new-note-header {
